# pgure-svt

./: .coverage  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  api.html  command.html  demo.py  examples.html  genindex.html  hyperspy_demo.py  index.html  install-dependencies.sh  install.html  install.sh  objects.inv  param.svt  params.json  pguresvt.py  pguresvt.py.in  py-modindex.html  python.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup.py.in
CMake/: FindArmadillo.cmake  FindLAPACK.cmake  FindNLOPT.cmake  FindOpenBLAS.cmake
_modules/: index.html
_modules/pguresvt/: hspy.html  svt.html
_sources/: index.rst.txt
_static/: override_layout.css
cmake_aux/Modules/: FindATLAS.cmake  FindBLAS.cmake
doc/: api.rst  conf.py  examples.rst  index.rst  install.rst
doc/_templates/: layout.html
examples/: HyperSpy Demo.ipynb  PGURE-SVT HyperSpy Demo.ipynb  PGURE-SVT-HyperSpy-Demo.ipynb  demo.py  example.tif  hyperspy_demo.py  param.svt  param_example.svt  param_nanoparticle.svt  param_se.svt
pguresvt/: CMakeLists.txt  __init__.py  __init__.py.in  _pguresvt.pyx  hspy.py  hspysvt.py  pguresvt.py  pguresvt.py.in  release_info.py  svt.py
pguresvt/tests/: data.npz  test_pguresvt.py  test_svt.py
python/: CMakeLists.txt  setup.py.in
python/pguresvt/: pguresvt.py.in
src/: CMakeLists.txt  CMakeLists.txt.save  PGURE-SVT-bin.cpp  PGURE-SVT-lib.cpp  PGURE-SVT.cpp  arps.cpp  arps.hpp  exe-PGURE-SVT.cpp  hotpixel.hpp  lib-PGURE-SVT.cpp  medfilter.c  medfilter.h  medfilter.hpp  mse.cpp  mse.hpp  noise.cpp  noise.hpp  paralle.hpp  parallel.hpp  params.cpp  params.hpp  pgure-svt.hpp  pgure.cpp  pgure.hpp  pguresvt.hpp  svt.cpp  svt.hpp  tools.cpp  tools.hpp  utils.hpp
src/pcg/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
stylesheets/: styles.css
test/: install-dependencies.sh  travis-install-dependencies.sh
